Fix run task, update README
"./gradlew run" failed with "Error: --module-path requires module path
specification".